[USP10]: Wine sync. SHA-1: 8fb52c7c5d711918fadf2590061d668093d14708 * usp10: Avoid non-standard array initialization.

Fix this bug introduced in revision 62535.
CORE-8029 #resolve #comment Fixed in revision 62563.

svn path=/trunk/; revision=62563